fix(header): z-index issue on chrome devtools open

--- a/src/components/global/header/header-interactive.scss
+++ b/src/components/global/header/header-interactive.scss
@@ -80,7 +80,7 @@
     transform: none;
     visibility: hidden;
     opacity: 0;
-    z-index: 0;
+    z-index: -1;
     pointer-events: none;
     display: flex;
     flex-direction: column;
